# JniGuide

./: README.md
app/: build.gradle
app/src/androidTest/java/com/norman/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/norman/app/: HomeActivity.java  MainActivity.kt  NativeUtil.java
app/src/main/java/com/norman/app/jni/: NativeUtil.java  Student.java
app/src/main/res/layout/: activity_home.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/norman/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jni/: README.md  build.gradle
jni/cpp-src/: com_norman_app_NativeUtil.h  com_norman_app_jni_NativeUtil.h  hello-jni.c
jni/cpp-src/util/: log.h
jni/src/androidTest/java/com/norman/jni/: ExampleInstrumentedTest.java
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: CMakeLists.txt
jni/src/main/cpp/internal/: CMakeLists.txt
jni/src/test/java/com/norman/jni/: ExampleUnitTest.java
